--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.intive.patronage</groupId>
-    <artifactId>qa.workshop</artifactId>
+    <artifactId>Framework</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
@@ -42,17 +42,6 @@
             <artifactId>testng</artifactId>
             <version>7.1.0</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-edge-driver</artifactId>
-            <version>3.141.59</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -95,8 +84,8 @@
                                             wtedy zostaną one wykonane w takiej kolejności, w jakiej je podaliśmy, ale maven potraktuje je jako
                                             jeden zestaw testów - bardzo wygodne i użyteczne, ponieważ dzięki temu możemy tworzyć sobie kilka plików
                                             z testami np. konkretnych kawałków systemu, którymi łatwiej jest nam zarządzać i sprawować kontrolę-->
-                    <suiteXmlFiles>test.xml,browserTest.xml</suiteXmlFiles>
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <suiteXmlFiles>log.xml</suiteXmlFiles>
+<useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
         </plugins>
