--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.intive.patronage</groupId>
-    <artifactId>qa.workshop</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>btb-system-test</artifactId>
+    <version>1.0</version>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
