--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
     </profiles>
     <dependencies>
         <dependency>
+            <groupId>com.opera</groupId>
+            <artifactId>operalaunchers</artifactId>
+            <version>0.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.1.0</version>
